Updated unwanted reference and gitignore to not include .idea

--- a/src/main/resources/org/ideaslabut/aws/lambda/service/application.properties
+++ b/src/main/resources/org/ideaslabut/aws/lambda/service/application.properties
@@ -1,3 +1,3 @@
-websocket.connection.url="wss://2wutjv5l5m.execute-api.us-east-2.amazonaws.com/production"
-elasticsearch.url=""
-elasticsearch.authenticationKey=""
+websocket.connection.url=https://2wutjv5l5m.execute-api.us-east-2.amazonaws.com/production
+elasticsearch.url=https://search-ideaslabut-wearable-qxzcm63ymlf5dvumvloqoxm22y.us-east-2.es.amazonaws.com
+elasticsearch.authenticationKey=aWRlYXNsYWJ1dDo5ODQ1MzE1MjE2QFBr
