--- a/build.gradle
+++ b/build.gradle
@@ -1,30 +1,38 @@
 buildscript {
     ext {
         awsLambdaJavaCoreVersion = '1.2.1'
-        awsJavaSdkApiGatewayManagementApiVersion = '1.12.150'
-        awsSdkCognitoIdentityVersion = '1.12.150'
-        awsJavaSdkCoreVersion = '1.12.150'
+        awsJavaSdkBomVersion = '1.12.150'
+        dependencyManagementPluginVersion = '1.0.11.RELEASE'
+        johnrenglemanShadowPluginVersion = '5.0.0'
         okhttpVersion = '4.9.3'
     }
 }
 
 plugins {
     id 'java'
-    id "com.github.johnrengelman.shadow" version "5.0.0"
+    id "com.github.johnrengelman.shadow" version "${johnrenglemanShadowPluginVersion}"
+    id "io.spring.dependency-management" version "${dependencyManagementPluginVersion}"
 }
 
 group = 'org.ideaslabut'
 version = '1.0.0-SNAPSHOT'
 sourceCompatibility = '11'
 
+dependencyManagement {
+    imports {
+        mavenBom "com.amazonaws:aws-java-sdk-bom:${awsJavaSdkBomVersion}"
+    }
+}
+
 repositories {
-	mavenCentral()
+    mavenCentral()
 }
 
 dependencies {
+    implementation "com.amazonaws:aws-java-sdk-apigatewaymanagementapi"
+    implementation "com.amazonaws:aws-java-sdk-core"
+
     implementation "com.amazonaws:aws-lambda-java-core:${awsLambdaJavaCoreVersion}"
-    implementation "com.amazonaws:aws-java-sdk-apigatewaymanagementapi:${awsJavaSdkApiGatewayManagementApiVersion}"
-    implementation "com.amazonaws:aws-java-sdk-core:${awsJavaSdkCoreVersion}"
     implementation "com.squareup.okhttp3:okhttp:${okhttpVersion}"
 }
 
