Updated connection to management for webSocket url

--- a/src/main/resources/org/ideaslabut/aws/lambda/service/application.properties
+++ b/src/main/resources/org/ideaslabut/aws/lambda/service/application.properties
@@ -1,2 +1,2 @@
-websocket.connection.url=https://2wutjv5l5m.execute-api.us-east-2.amazonaws.com/production
+websocket.management.url=https://2wutjv5l5m.execute-api.us-east-2.amazonaws.com/production
 elasticsearch.url=https://search-ideaslabut-wearable-qxzcm63ymlf5dvumvloqoxm22y.us-east-2.es.amazonaws.com
