--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,16 @@
 buildscript {
     ext {
         awsLambdaJavaCoreVersion = '1.2.1'
-        awsJavaSdkBomVersion = '1.12.150'
+        awssdkBomVersion = '2.17.156'
+        jacksonDatabindVersion = '2.13.2'
+        junitBomVersion = '5.8.2'
+        hamcrestVersion = '2.2'
+        mockitoInlineVersion = '3.11.2'
+        okhttpVersion = '4.9.3'
+        slf4jSimpleVersion = '1.7.30'
+
         dependencyManagementPluginVersion = '1.0.11.RELEASE'
         johnrenglemanShadowPluginVersion = '5.0.0'
-        okhttpVersion = '4.9.3'
     }
 }
 
@@ -20,7 +26,8 @@ sourceCompatibility = '11'
 
 dependencyManagement {
     imports {
-        mavenBom "com.amazonaws:aws-java-sdk-bom:${awsJavaSdkBomVersion}"
+        mavenBom "software.amazon.awssdk:bom:${awssdkBomVersion}"
+        mavenBom "org.junit:junit-bom:${junitBomVersion}"
     }
 }
 
@@ -29,11 +36,19 @@ repositories {
 }
 
 dependencies {
-    implementation "com.amazonaws:aws-java-sdk-apigatewaymanagementapi"
-    implementation "com.amazonaws:aws-java-sdk-core"
-
+    implementation "software.amazon.awssdk:sdk-core"
+    implementation "software.amazon.awssdk:apigatewaymanagementapi"
+    implementation "com.fasterxml.jackson.core:jackson-databind:${jacksonDatabindVersion}"
     implementation "com.amazonaws:aws-lambda-java-core:${awsLambdaJavaCoreVersion}"
     implementation "com.squareup.okhttp3:okhttp:${okhttpVersion}"
+    implementation "org.slf4j:slf4j-simple:${slf4jSimpleVersion}"
+
+    testImplementation "org.junit.jupiter:junit-jupiter-api"
+    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine"
+
+    testImplementation "org.mockito:mockito-inline:${mockitoInlineVersion}"
+    testImplementation "org.hamcrest:hamcrest:${hamcrestVersion}"
+
 }
 
 shadowJar {
