--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     implementation "com.amazonaws:aws-lambda-java-core:${awsLambdaJavaCoreVersion}"
     implementation "com.squareup.okhttp3:okhttp:${okhttpVersion}"
     implementation "org.slf4j:slf4j-simple:${slf4jSimpleVersion}"
+    implementation 'me.tongfei:progressbar:0.9.3'
 
     testImplementation "org.junit.jupiter:junit-jupiter-api"
     testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine"
@@ -52,7 +53,7 @@ dependencies {
 }
 
 shadowJar {
-    exclude "*.local.sample"
+    exclude "*.sample" , "*ProgressBar*.class", "*Test.class"
     destinationDirectory = file("${buildDir}/libs")
 }
 
