--- a/build.gradle
+++ b/build.gradle
@@ -6,17 +6,14 @@ buildscript {
         junitBomVersion = '5.8.2'
         hamcrestVersion = '2.2'
         mockitoInlineVersion = '3.11.2'
-        okhttpVersion = '4.9.3'
         slf4jSimpleVersion = '1.7.30'
 
         dependencyManagementPluginVersion = '1.0.11.RELEASE'
-        johnrenglemanShadowPluginVersion = '5.0.0'
     }
 }
 
 plugins {
     id 'java'
-    id "com.github.johnrengelman.shadow" version "${johnrenglemanShadowPluginVersion}"
     id "io.spring.dependency-management" version "${dependencyManagementPluginVersion}"
 }
 
@@ -40,9 +37,7 @@ dependencies {
     implementation "software.amazon.awssdk:apigatewaymanagementapi"
     implementation "com.fasterxml.jackson.core:jackson-databind:${jacksonDatabindVersion}"
     implementation "com.amazonaws:aws-lambda-java-core:${awsLambdaJavaCoreVersion}"
-    implementation "com.squareup.okhttp3:okhttp:${okhttpVersion}"
     implementation "org.slf4j:slf4j-simple:${slf4jSimpleVersion}"
-    implementation 'me.tongfei:progressbar:0.9.3'
 
     testImplementation "org.junit.jupiter:junit-jupiter-api"
     testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine"
@@ -52,9 +47,19 @@ dependencies {
 
 }
 
-shadowJar {
-    exclude "*.sample" , "*ProgressBar*.class", "*Test.class"
-    destinationDirectory = file("${buildDir}/libs")
+task lambdaJar(type: Jar) {
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+    archivesBaseName = project.name
+    destinationDirectory = project.file("${project.buildDir}/libs")
+    from project.compileJava
+    from project.processResources
+    from {
+        configurations.runtimeClasspath.collect {
+            it.isDirectory() ? it : zipTree(it)
+        }
+    }
+    exclude "**/Main.class", "**/**.sample", "**/ProgressBar**.class",  "**/CSVWriter**.class"
+    into ""
 }
 
 test {
