--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,6 @@ buildscript {
         awssdkBomVersion = '2.17.156'
         jacksonDatabindVersion = '2.13.2'
         junitBomVersion = '5.8.2'
-        hamcrestVersion = '2.2'
         mockitoInlineVersion = '3.11.2'
         slf4jSimpleVersion = '1.7.30'
 
@@ -43,7 +42,6 @@ dependencies {
     testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine"
 
     testImplementation "org.mockito:mockito-inline:${mockitoInlineVersion}"
-    testImplementation "org.hamcrest:hamcrest:${hamcrestVersion}"
 
 }
 
@@ -51,15 +49,24 @@ task lambdaJar(type: Jar) {
     duplicatesStrategy = DuplicatesStrategy.EXCLUDE
     archivesBaseName = project.name
     destinationDirectory = project.file("${project.buildDir}/libs")
-    from project.compileJava
-    from project.processResources
+
+
+    manifest {
+        attributes 'Implementation-Version': project.version, 'Implementation-Title': project.name
+    }
+
+    from project.sourceSets.main.output
     from {
-        configurations.runtimeClasspath.collect {
-            it.isDirectory() ? it : zipTree(it)
+        project.configurations.runtimeClasspath.collect {
+            it.isDirectory() ? it : project.zipTree(it)
         }
     }
     exclude "**/Main.class", "**/**.sample", "**/ProgressBar**.class",  "**/CSVWriter**.class"
-    into ""
+}
+
+task extractElasticsearchData(type: JavaExec) {
+    mainClass = "org.ideaslabut.aws.lambda.domain.Main"
+    classpath = sourceSets.main.runtimeClasspath
 }
 
 test {
