--- a/build.gradle
+++ b/build.gradle
@@ -8,78 +8,55 @@ buildscript {
         slf4jSimpleVersion = '1.7.30'
 
         dependencyManagementPluginVersion = '1.0.11.RELEASE'
+        modulePluginVersion = '1.8.10'
     }
 }
 
 plugins {
     id 'java'
-    id "io.spring.dependency-management" version "${dependencyManagementPluginVersion}"
-    id 'org.javamodularity.moduleplugin' version '1.8.10'
+    id 'io.spring.dependency-management' version "${dependencyManagementPluginVersion}" apply false
+    id 'org.javamodularity.moduleplugin' version "${modulePluginVersion}" apply false
 }
 
 group = 'org.ideaslabut'
 version = '1.0.0-SNAPSHOT'
 sourceCompatibility = '11'
 
-dependencyManagement {
-    imports {
-        mavenBom "software.amazon.awssdk:bom:${awssdkBomVersion}"
-        mavenBom "org.junit:junit-bom:${junitBomVersion}"
-    }
-}
+afterEvaluate {
+    subprojects {
+        apply plugin: 'java'
+        apply plugin: 'org.javamodularity.moduleplugin'
+        apply plugin: 'io.spring.dependency-management'
 
-repositories {
-    mavenCentral()
-}
+        repositories {
+            mavenCentral()
+        }
 
-dependencies {
-    implementation 'software.amazon.awssdk:sdk-core'
-    implementation 'software.amazon.awssdk:apigatewaymanagementapi'
-    implementation "com.fasterxml.jackson.core:jackson-databind:${jacksonDatabindVersion}"
-    implementation "com.amazonaws:aws-lambda-java-core:${awsLambdaJavaCoreVersion}"
-    implementation "org.slf4j:slf4j-simple:${slf4jSimpleVersion}"
+        dependencyManagement {
+            dependencies {
+                dependency "com.fasterxml.jackson.core:jackson-databind:${jacksonDatabindVersion}"
+                dependency "com.amazonaws:aws-lambda-java-core:${awsLambdaJavaCoreVersion}"
+                dependency "org.slf4j:slf4j-simple:${slf4jSimpleVersion}"
+            }
 
-    testImplementation 'org.junit.jupiter:junit-jupiter-api'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
+            imports {
+                mavenBom "software.amazon.awssdk:bom:${awssdkBomVersion}"
+                mavenBom "org.junit:junit-bom:${junitBomVersion}"
+            }
+        }
 
-    testImplementation "org.mockito:mockito-inline:${mockitoInlineVersion}"
-}
+        dependencies {
+            implementation 'software.amazon.awssdk:sdk-core'
+            implementation 'software.amazon.awssdk:apigatewaymanagementapi'
+            testImplementation 'org.junit.jupiter:junit-jupiter'
+            testImplementation "org.mockito:mockito-inline:${mockitoInlineVersion}"
+        }
 
-task lambdaJar(type: Jar) {
-    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
-    archivesBaseName = project.name
-    destinationDirectory = project.file("${project.buildDir}/libs")
-
-    from project.sourceSets.main.output
-    from {
-        project.configurations.runtimeClasspath.collect {
-            it.isDirectory() ? it : project.zipTree(it)
+        test {
+            moduleOptions {
+                runOnClasspath = true
+            }
+            useJUnitPlatform()
         }
     }
-    exclude '**/Main.class', '**/**.sample', '**/ProgressBar**.class',  '**/CSVWriter**.class'
-}
-
-task lambdaZip(type: Zip) {
-    archivesBaseName = project.name
-    destinationDirectory = project.file("${project.buildDir}/libs")
-
-    from project.sourceSets.main.output
-
-    into('lib') {
-        from project.configurations.runtimeClasspath
-    }
-
-    exclude '**/Main.class', '**/**.sample', '**/ProgressBar**.class',  '**/CSVWriter**.class'
-}
-
-task extractElasticsearchData(type: JavaExec) {
-    mainClass = "org.ideaslabut.aws.lambda.domain.Main"
-    classpath = sourceSets.main.runtimeClasspath
-}
-
-test {
-    moduleOptions {
-        runOnClasspath = true
-    }
-    useJUnitPlatform()
 }
