--- a/core/build.gradle
+++ b/core/build.gradle
@@ -3,8 +3,8 @@ apply plugin: 'java-library'
 dependencies {
     api 'software.amazon.awssdk:sdk-core'
     api 'software.amazon.awssdk:apigatewaymanagementapi'
-    api "com.fasterxml.jackson.core:jackson-databind"
-    api "com.amazonaws:aws-lambda-java-core"
+    api 'com.fasterxml.jackson.core:jackson-databind'
+    api 'org.slf4j:slf4j-api'
 }
 
 jar {
