--- a/elasticsearch-to-csv/build.gradle
+++ b/elasticsearch-to-csv/build.gradle
@@ -1,9 +1,12 @@
 dependencies {
     implementation project(":core")
     implementation project(":extractor-util")
+    implementation 'org.apache.logging.log4j:log4j-api'
+    implementation 'org.apache.logging.log4j:log4j-core'
+    runtimeOnly 'org.apache.logging.log4j:log4j-slf4j18-impl'
 }
 
 task extractElasticsearchData(type: JavaExec) {
-    mainClass = "org.ideaslabut.aws.lambda.domain.Main"
+    mainClass = "org.ideaslabut.aws.lambda.estocsv.ElasticsearchToCsv"
     classpath = sourceSets.main.runtimeClasspath
 }
