--- a/elasticsearch-to-csv/build.gradle
+++ b/elasticsearch-to-csv/build.gradle
@@ -1,9 +1,7 @@
 dependencies {
     implementation project(":core")
     implementation project(":extractor-util")
-    implementation 'org.apache.logging.log4j:log4j-api'
-    implementation 'org.apache.logging.log4j:log4j-core'
-    runtimeOnly 'org.apache.logging.log4j:log4j-slf4j18-impl'
+    implementation "org.slf4j:slf4j-nop"
 }
 
 task extractElasticsearchData(type: JavaExec) {
