--- a/websocket-lambda/build.gradle
+++ b/websocket-lambda/build.gradle
@@ -5,7 +5,9 @@ dependencies {
     implementation 'org.apache.logging.log4j:log4j-api'
     implementation 'org.apache.logging.log4j:log4j-core'
 
-    runtimeOnly 'org.apache.logging.log4j:log4j-slf4j18-impl'
+    runtimeOnly ('org.apache.logging.log4j:log4j-slf4j18-impl') {
+        exclude group: 'org.slf4j', module: 'slf4j-api'
+    }
     runtimeOnly 'com.amazonaws:aws-lambda-java-log4j2'
 }
 
