Updated copyright block

--- a/core/build.gradle
+++ b/core/build.gradle
@@ -12,6 +12,8 @@ dependencies {
     api 'com.fasterxml.jackson.core:jackson-databind'
     api 'org.apache.commons:commons-lang3'
     api 'org.slf4j:slf4j-api'
+
+    testImplementation 'org.slf4j:slf4j-nop'
 }
 
 jar {
