Updated progress bar test

--- a/build.gradle
+++ b/build.gradle
@@ -62,6 +62,10 @@ afterEvaluate {
                 runOnClasspath = true
             }
             useJUnitPlatform()
+
+            testLogging {
+                showStandardStreams = true
+            }
         }
     }
 }
