--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ buildscript {
         awsLambdaJavaLog4j2Version='1.5.0'
         jacksonDatabindVersion = '2.13.2'
         junitBomVersion = '5.8.2'
+        hamcrestVersion = '2.2'
         mockitoInlineVersion = '3.11.2'
         log4jBomVersion = '2.17.2'
         slf4jNopVersion = '1.7.30'
@@ -55,6 +56,7 @@ afterEvaluate {
         dependencies {
             testImplementation 'org.junit.jupiter:junit-jupiter'
             testImplementation "org.mockito:mockito-inline:${mockitoInlineVersion}"
+            testImplementation "org.hamcrest:hamcrest:${hamcrestVersion}"
         }
 
         test {
